To-Do/To-Do App/src/App.css
/*
  SPACING SYSTEM (px)
  2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128

  FONT SIZE SYSTEM (px)
  10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
*/

:root {
  --font-familt-bold: "Calistoga", serif;
  --font-familt-light: "Bitter", serif;
}

*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

html {
  font-size: 62.5%;
  font-family: var(--font-familt-light);
}

body {
  box-sizing: border-box;
  padding: 4rem 8rem;
  background-color: #f1f3f5;
  border: 11px;
  position: relative;
}

.container {
  background-color: #e9ecef;
  max-width: 1200px;
  margin: auto;
  padding: 4rem 8rem;
}

.header {
  font-size: 4rem;
  font-family: var(--font-familt-bold);
  text-align: center;
  padding: 4rem 8rem;
}

.btn__container {
  display: flex;
  justify-content: end;
  align-items: center;
}

.btn__add-task {
  font-size: 1.4rem;
  padding: 1rem 2rem;
  display: flex;
  align-content: center;
  gap: 0.4rem;
  border-radius: 11px;
  border: none;
  background-color: #212529;
  color: #fff;
  cursor: pointer;
}

.icon {
  font-size: 1.6rem;
  color: #fff;
}

.icon * {
  color: #fff;
  fill: #fff;
  stroke: #fff;
}

.btn__options {
  font-size: 1.4rem;
  padding: 0.8rem 1.2rem;
  border: none;
  background-color: transparent;
  color: #212121;
  border-radius: 0px;
  cursor: pointer;
  position: relative;

  transition: all 0.3s;
}

.btn__options:hover {
  background-color: #ced4da;
}

.option__container {
  position: relative;
}

.btn__options--select {
  display: flex;
  flex-direction: column;
  position: absolute;
  top: 95%;
  left: 0%;
  min-width: max-content;
}

.btn__options--select button {
  background-color: #dee2e6;
  border: none;
  border-radius: 3px;
  padding: 0.6rem 0.8rem;
  cursor: pointer;
  font-family: var(--font-familt-light);
  font-weight: 500;
  transition: all 0.3s;
}

.btn__options--select button:hover {
  background-color: #ced4da;
}

.taskContainer {
  list-style: none;
  font-size: 1.4rem;
  padding: 2.4rem 0rem;
}

.task {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.task:not(:last-child) {
  margin-bottom: 1.2rem;
}

.task .task__detail {
  display: flex;
  align-items: center;
  gap: 1.2rem;
}

.task .task__title {
  font-family: var(--font-familt-bold);
}

.task .task__btn {
  display: flex;
  gap: 0.4rem;
}

.task__status {
  display: block;
  font-size: 1.2rem;
  align-items: center;
  text-transform: uppercase;
  padding: 0.3rem 0.6rem;
  font-family: var(--font-familt-bold);
  border-radius: 11px;
}

.task .task__btn button {
  font-size: 1.6rem;
  display: inline-flex;
  align-items: center;
  background-color: #212121;
  padding: 0.4rem 0.6rem;
  cursor: pointer;
  border-radius: 3px;
  color: #fff;
}

.form__container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  column-gap: 1.6rem;
  margin: 4rem 0;
  /* transition: all 0.3s; */
}

.form__row {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  gap: 1.2rem;
}

.form__row input,
.form__row textarea,
.form__row select {
  flex-grow: 1;
  border-radius: 3px;
  border: none;
  height: 2.4rem;
}

.form__row label {
  font-family: var(--font-familt-bold);
  font-size: 1.4rem;
}

.form__container .form__row:last-child {
  grid-column: 3/4;
  margin-top: 1.2rem;
  min-width: 40%;
  margin-left: auto;
}

.btn__send {
  display: flex;
  flex-grow: 1;
  justify-content: center;
  font-size: 1.4rem;
  font-family: var(--font-familt-bold);
  background-color: #2b8a3e;
  color: #fff;
  border-radius: 11px;
  border: none;
  padding: 0.8rem 1.2rem;
  cursor: pointer;
}

.modal__container {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.6);
  backdrop-filter: blur(3px);
  z-index: 5;
}

.modal {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 40%;
  background-color: #fff;
  padding: 4rem 6rem;
  border-radius: 5px;
  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
  z-index: 10;
}

.modal__header {
  display: flex;
  justify-content: space-between;
  font-family: var(--font-familt-bold);
  font-size: 1.6rem;
  text-transform: uppercase;
}

.modal__body {
  font-size: 1.4rem;
  font-family: var(--font-familt-light);
  padding: 2.4rem 0;
}

.modal__footer {
  display: flex;
  justify-content: flex-end;
  gap: 0.8rem;
}

.modal__footer button {
  padding: 0.8rem 1.6rem;
  border: none;
  border-radius: 3px;
  font-weight: 600;
  cursor: pointer;
}

.btn__cancel {
  background-color: #c92a2a;
  color: #fff;
}

.delete__text {
  display: flex;
  justify-content: center;
  font-family: var(--font-familt-bold);
  font-size: 1.6rem;
  text-transform: uppercase;
  margin: 2.8rem 0;
}

.input__row {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin: 2.4rem 0rem;
  gap: 1.6rem;
}

.input__row label {
  font-size: 1.4rem;
  font-family: var(--font-familt-bold);
}

.input__row input,
.input__row textarea,
.input__row select {
  flex-grow: 1;
  border-radius: 3px;
}

